--- a/index.html
+++ b/index.html
@@ -63,12 +63,15 @@
             font-family: monospace;
             font-size: 14px;
             overflow-x: auto;
+            overflow-y: auto; /* Adiciona rolagem vertical */
+            max-height: 400px; /* Defina o tamanho máximo que deseja para a altura */
             min-height: 50px;
             display: flex;
             align-items: center;
             justify-content: center;
             color: #888;
         }
+
     </style>
 </head>
 <body>
